--- a/config.ini
+++ b/config.ini
@@ -14,6 +14,7 @@ agent-name = "<YOUR AGENT>"
 http-server-address = 0.0.0.0:8888
 p2p-listen-endpoint = 0.0.0.0:9876
 p2p-peer-address = n3.eosargentina.io:9876
+p2p-peer-address = seed1.eosaurora.io:9876
 genesis-json = "genesis.json"
 block-log-dir = "blocks"
 shared-memory-size-mb = 1024
