changes in privates

--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,7 @@
 ########################################
 
 producer-name = <YOUR PRODUCER>
-private-key = "<YOUR KEYS>"
+private-key = ["<pub>","<privkey>"]
 agent-name = "<YOUR AGENT>"
 
 ########################################
