--- a/config.ini
+++ b/config.ini
@@ -9,8 +9,6 @@ agent-name = "<YOUR AGENT>"
 
 ########################################
 
-
-
 http-server-address = 0.0.0.0:8888
 p2p-listen-endpoint = 0.0.0.0:9876
 p2p-peer-address = n3.eosargentina.io:9876
@@ -32,3 +30,10 @@ txn-reference-block-lag = 0
 wallet-dir = "."
 unlock-timeout = 900
 plugin = eosio::producer_plugin
+plugin = eosio::producer_plugin
+plugin = eosio::chain_plugin
+plugin = eosio::chain_api_plugin
+plugin = eosio::net_plugin
+plugin = eosio::net_api_plugin
+plugin = eosio::http_plugin
+plugin = eosio::wallet_api_plugin
