--- a/config.ini
+++ b/config.ini
@@ -7,6 +7,7 @@ producer-name = <YOUR PRODUCER>
 private-key = ["<pub>","<privkey>"]
 agent-name = "<YOUR AGENT>"
 
+#p2p-server-address =
 ########################################
 
 http-server-address = 0.0.0.0:8888
